--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\ld\\.virtualenvs\\ask4args\\Scripts\\python.exe"
+    "python.pythonPath": "D:\\Python3\\python.exe"
 }
